<resources>
    <string name="app_name">LSBU FRIENDS</string>
    <string name="first_name">First Name</string>
    <string name="faculty">Faculty</string>
    <string name="select_faculty">Select Faculty</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="is_successful">Successful</string>
    <string name="is_error">Error!</string>
    <string name="your_are_going_to_register_please_wait">You are going to register\nPlease Wait…</string>
    <string name="register">Register</string>
    <string name="email">Email</string>

    <!--    Faculty Category -->
    <string-array name="faculty">
        <item>Mathematics</item>
        <item>Civil Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Software Engineering</item>
        <item>Electrical Engineering</item>
        <item>Nursing</item>
        <item>Psychology</item>
        <item>Business</item>
        <item>Law</item>
    </string-array>

    <string-array name="faculty_filter">
        <item>All</item>
        <item>Mathematics</item>
        <item>Civil Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Software Engineering</item>
        <item>Electrical Engineering</item>
        <item>Nursing</item>
        <item>Psychology</item>
        <item>Business</item>
        <item>Law</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="share_post">Share Post</string>
    <string name="post">Post</string>
    <string name="cancel">cancel</string>
    <string name="filter">Filter</string>
    <string name="todo">TODO</string>
    <string name="here_shows_all_posts">Here Shows all Posts</string>
    <string name="profile_show_here">Profile Show here</string>
    <string name="require_field">Require Field</string>
    <string name="ask_a_question">Ask a question...</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="delete_for_me">Delete for Me</string>
</resources>