<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFECEC"
    tools:context=".ui.post.AddPostFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_gray_border_bottom">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/postToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/closeArrow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/cancel"
                            android:src="@drawable/ic_baseline_close_24"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/profileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/closeArrow"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/share_post"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/post"
                            android:textStyle="bold|normal"
                            android:textColor="@color/lightGray"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_emoji"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/profileImage"
                android:text="User Name"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout2"
            android:padding="10dp">

            <EditText
                android:id="@+id/postTextEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="start"
                android:hint="What do you want to talk about"
                android:inputType="text|textAutoCorrect|textCapSentences|textAutoComplete|textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />
        </RelativeLayout>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>